--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -7,8 +7,7 @@
     "pages/homeDetail/homeDetail",
     "pages/history/history",
     "pages/collect/collect",
-    "pages/advance/advance",
-    "pages/replay/replay"
+    "pages/advance/advance"
   ],
   "window": {
     "backgroundColor": "#F6F6F6",
