--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -13,7 +13,7 @@
     "backgroundColor": "#F6F6F6",
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#F6F6F6",
-    "navigationBarTitleText": "MFactive",
+    "navigationBarTitleText": "MFActives",
     "navigationBarTextStyle": "black"
   },
   "tabBar": {
