--- a/project.config.json
+++ b/project.config.json
@@ -8,8 +8,8 @@
 		"minified": true,
 		"newFeature": true
 	},
-	"appid": "wx006f72e99dbfff39",
-	"projectname": "AfterGame",
+	"appid": "wxaf17ace400e958e6",
+	"projectname": "MFActives",
 	"libVersion": "2.2.5",
 	"simulatorType": "wechat",
 	"simulatorPluginLibVersion": {},
